--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
     <title>E-META LABS | Corporate</title>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Inter:wght@300;400&display=swap" rel="stylesheet">
     <style>
+        /* Réinitialisation de base pour éviter les débordements */
+        *, *::before, *::after {
+            box-sizing: border-box;
+        }
+
         body {
             margin: 0;
-            padding: 0;
+            padding: 20px;
             background-color: #030a16;
             background-image: radial-gradient(circle at 50% 50%, #0a192f 0%, #030a16 100%);
             color: #ffffff;
@@ -17,25 +22,28 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            min-height: 100vh; /* Permet au contenu de s'étendre si nécessaire */
             text-align: center;
-            overflow: hidden;
         }
+
         .container {
+            width: 100%;
             max-width: 800px;
-            padding: 40px;
+            padding: 50px 40px;
             background: rgba(255, 255, 255, 0.02);
             border: 1px solid rgba(212, 175, 55, 0.2);
             border-radius: 15px;
             backdrop-filter: blur(10px);
             box-shadow: 0 20px 50px rgba(0,0,0,0.5);
         }
+
         .logo svg {
             width: 80px;
             height: 80px;
             margin-bottom: 20px;
             animation: pulse 3s infinite;
         }
+
         h1 {
             font-family: 'Cinzel', serif;
             color: #d4af37;
@@ -43,26 +51,39 @@
             letter-spacing: 3px;
             margin: 0 0 10px 0;
         }
+
         h2 {
             font-weight: 300;
             font-size: 1.2rem;
             letter-spacing: 2px;
             color: #a0aec0;
-            margin-bottom: 40px;
+            margin-bottom: 30px;
             text-transform: uppercase;
         }
+
         .divider {
             width: 50px;
             height: 2px;
             background-color: #d4af37;
-            margin: 0 auto 40px auto;
+            margin: 0 auto 30px auto;
         }
+
         p {
             font-size: 1rem;
             color: #e6f1ff;
             line-height: 1.6;
-            margin-bottom: 30px;
+            margin-bottom: 40px;
+            padding: 0 20px;
         }
+
+        /* Conteneur Flexbox pour gérer les boutons intelligemment */
+        .btn-group {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            flex-wrap: wrap; 
+        }
+
         .btn {
             display: inline-block;
             padding: 12px 30px;
@@ -76,20 +97,24 @@
             transition: all 0.3s ease;
             text-transform: uppercase;
             letter-spacing: 1px;
-            margin: 10px;
+            min-width: 250px;
         }
+
         .btn:hover {
             background-color: rgba(212, 175, 55, 0.1);
             box-shadow: 0 0 15px rgba(212, 175, 55, 0.3);
         }
+
         .btn-solid {
             background-color: #d4af37;
             color: #030a16;
         }
+
         .btn-solid:hover {
             background-color: #fce28b;
             color: #030a16;
         }
+
         .hubs {
             margin-top: 50px;
             font-size: 0.8rem;
@@ -97,10 +122,54 @@
             letter-spacing: 2px;
             text-transform: uppercase;
         }
+
         @keyframes pulse {
             0% { transform: scale(0.98); opacity: 0.8; }
             50% { transform: scale(1.02); opacity: 1; }
             100% { transform: scale(0.98); opacity: 0.8; }
+        }
+
+        /* --- MODE SMARTPHONE (Responsive Design) --- */
+        @media (max-width: 768px) {
+            body {
+                padding: 15px;
+            }
+            .container {
+                padding: 40px 20px;
+            }
+            .logo svg {
+                width: 60px;
+                height: 60px;
+            }
+            h1 {
+                font-size: 1.8rem;
+                letter-spacing: 2px;
+            }
+            h2 {
+                font-size: 0.9rem;
+                letter-spacing: 1px;
+                margin-bottom: 20px;
+            }
+            p {
+                font-size: 0.9rem;
+                padding: 0;
+                margin-bottom: 30px;
+            }
+            /* Sur mobile, les boutons s'empilent verticalement */
+            .btn-group {
+                flex-direction: column;
+                gap: 15px;
+            }
+            .btn {
+                width: 100%;
+                min-width: auto;
+            }
+            .hubs {
+                margin-top: 40px;
+                font-size: 0.7rem;
+                letter-spacing: 1px;
+                line-height: 1.6;
+            }
         }
     </style>
 </head>
@@ -123,13 +192,14 @@
         <p>Notre portail institutionnel est actuellement en cours de déploiement sécurisé.<br>
         Notre moteur d'intelligence stratégique reste pleinement opérationnel pour nos partenaires.</p>
         
-        <div>
+        <div class="btn-group">
             <a href="https://e-meta.app" class="btn btn-solid">Accéder au Diagnostic IA</a>
             <a href="mailto:contact@e-metalabs.com" class="btn">Nous Contacter</a>
         </div>
 
         <div class="hubs">
-            Strategic Intelligence Unit • Dakar | Paris | Dubai
+            Strategic Intelligence Unit<br>
+            Dakar | Paris | Dubai
         </div>
     </div>
 
